--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body { margin: 0; padding: 0; }
         }
 
       .mapboxgl-ctrl-top-right {
-        top: 545px !important; 
-        right: 2px !important;
+        top: 10px; 
+        right: 2px;
       }
       .mapboxgl-ctrl-group button {
         width: 40px; 
@@ -34,27 +34,25 @@ body { margin: 0; padding: 0; }
 </style>
 </head>
 <body>
-  <div id="button"></div>
   <div id="map"></div>
+  <div id="button"></div>
 <script>
 	mapboxgl.accessToken = 'pk.eyJ1IjoibGl6bWNjbGVhcnkiLCJhIjoiY203dXJvbG8zMDQxcTJqb2RobWJrb29rZiJ9.EXEp4Zxzb90S3p3977Pnfw';
     const map = new mapboxgl.Map({
         container: 'map', 
-        center: [-123.406, 48.446],
-        zoom: 17
+        center: [-123.407, 48.4457],
+        zoom: 15
     });
   
       const scale = new mapboxgl.ScaleControl({
         maxWidth: 80,
         unit: 'imperial'
       });
-      
+      map.addNavigation(); 
+	
       map.addControl(scale);
-
       scale.setUnit('metric');
       
-      // Add Find My Location to map 
-      map.addControl(new mapboxgl.NavigationControl());
   
   map.on('load', () => {
         map.addSource('resto_sites', {
