--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@ body { margin: 0; padding: 0; }
         center: [-123.407, 48.4457],
         zoom: 15
     });
-  
+
+      map.addControl(new mapboxgl.NavigationControl(), 'top-right');
+
       const scale = new mapboxgl.ScaleControl({
         maxWidth: 80,
         unit: 'imperial'
       });
-	
       map.addControl(scale);
       scale.setUnit('metric');
       
